--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "biopython>=1.85",
     "pre-commit>=4.2.0",
+    "pytest>=8.3.5",
 ]
