--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,9 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "biopython>=1.85",
+    "fire>=0.7.0",
+    "pandas>=2.2.3",
     "pre-commit>=4.2.0",
     "pytest>=8.3.5",
+    "tqdm>=4.67.1",
 ]
